k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: image-processor
spec:
  selector:
    matchLabels:
      app: image-worker
  template:
    metadata:
      labels:
        app: image-worker
    spec:
      containers:
      - name: worker
        image: rupolaso/worker-img-processor-image:v2
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
        volumeMounts:
        - name: storage
          mountPath: /app/uploads
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: image-pvc
