k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: image-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-api
  template:
    metadata:
      labels:
        app: image-api
    spec:
      containers:
      - name: api
        image: rupolaso/api-img-processor-image:v2
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
        volumeMounts:
        - name: storage
          mountPath: /app/uploads
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: image-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: image-processor
spec:
  selector:
    app: image-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
